updated authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,6 @@
   
 * Gilles Aouizerate <gilles.aouizerate@gmail.com>
   Extension of COESA model up to 86km
+
+* Andres Quezada Reed <andres.quezada.reed@gmail.com>
+  Coordinates module. CI and code coverage
